--- a/ghost/admin/app/styles/layouts/post-preview.css
+++ b/ghost/admin/app/styles/layouts/post-preview.css
@@ -1,28 +1,46 @@
+.gh-post-preview-modal {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    background: var(--grey-75);
+}
+
 .gh-post-preview-header {
-    position: sticky;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 9999;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-shrink: 0;
-    height: 34px;
-    overflow: hidden;
-    margin: 30px;
-    background: var(--white);
+    margin: 0;
+    padding: 1.2rem 2rem;
+    background: var(--grey-75);
 }
 
 .gh-post-preview-header .left {
     position: absolute;
-    left: 0;
+    left: 20px;
+    display: flex;
+    align-items: center;
+}
+
+.gh-post-preview-header h2 {
+    margin: 0;
+    font-size: 2rem;
 }
 
 .gh-post-preview-header .right {
     position: absolute;
-    right: 0;
+    right: 20px;
     display: flex;
+    align-items: center;
+    gap: 8px;
+}
+
+.gh-post-preview-header .gh-btn-editor {
+    background: none;
+}
+
+.gh-post-preview-header .gh-btn-editor:hover {
+    background: var(--whitegrey);
 }
 
 @media (max-width: 1024px) {
@@ -35,50 +53,99 @@
         background-color: var(--white);
         border-radius: 0;
     }
+}
 
-    .gh-post-preview-header .left {
-        position: absolute;
-        left: 15px;
-    }
+.gh-post-preview-btn-group {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 8px;
 }
 
 .gh-post-preview-btn-group .gh-btn-group {
+    gap: .2rem;
+    margin: 0 4px;
     background: transparent;
 }
 
 .gh-post-preview-btn-group .gh-btn-group span {
     height: 34px;
+    padding: 0 10px;
     line-height: 34px;
+    background: none !important;
     box-shadow: none;
 }
 
-.gh-post-preview-btn-group button {
-    width: 64px;
+.gh-post-preview-btn-group .gh-btn-group span:hover {
+    background: var(--whitegrey) !important;
+}
+
+.gh-post-preview-btn-group .gh-btn {
+    margin: 0;
+}
+
+.gh-web-preview-segment {
+    height: 34px;
+    margin: 0 4px;
+    background: transparent;
+}
+
+.gh-preview-segment-dropdown.ember-power-select-dropdown.ember-basic-dropdown-content--below {
+    border-top: 1px solid var(--input-border-color);
+    border-radius: 6px;
+    box-shadow: var(--shadow-2);
+}
+
+.gh-web-preview-segment .gh-preview-segment-trigger {
+    height: 34px;
+    padding: 0 28px 0 14px;
+    background: transparent;
+    border: none;
+    color: var(--black);
+    font-size: 1.3rem;
+    font-weight: 500;
+    line-height: 34px;
+    border-radius: 5px;
+}
+
+.gh-web-preview-segment:hover .gh-preview-segment-trigger {
+    background: var(--whitegrey);
+}
+
+.gh-select.gh-web-preview-segment .gh-preview-segment-trigger svg {
+    height: 5px;
+    margin-top: -.1em;
+}
+
+.gh-select.gh-web-preview-segment svg path {
+    stroke-width: 4px;
+    stroke: var(--black);
 }
 
 .gh-post-preview-mode svg {
-    max-height: 20px;
-    max-width: 20px;
+    height: 18px;
+    width: 18px;
     vertical-align: middle;
-    fill: var(--midgrey);
     color: var(--midgrey);
 }
 
 .gh-publish-preview-newtab {
-    display: inherit;
-    margin-top: 2px;
-    margin-left: 1.6rem;
+    background: transparent;
+    color: var(--black);
+    cursor: pointer;
 }
 
 .gh-publish-preview-newtab svg {
-    width: 14px;
-    height: 16px;
-    fill: var(--darkgrey);
+    fill: none;
 }
 
-.gh-publish-preview-newtab svg path {
-    stroke-width: .8px;
-    stroke: var(--darkgrey);
+.gh-publish-preview-newtab span {
+    padding: 0 10px;
+}
+
+.gh-publish-preview-newtab svg {
+    width: 18px;
+    height: 18px;
 }
 
 /* Preview animation */
@@ -100,20 +167,13 @@
 /* Browser preview */
 
 .gh-post-preview-browser-container {
+    z-index: 999;
     display: flex;
     flex-direction: column;
     height: 100%;
-    margin: 0 40px;
-    border-radius: 3px !important;
-    box-shadow:
-        0 0 0 1px rgba(0,0,0,0.02),
-        0 2.8px 2.2px rgba(0, 0, 0, 0.02),
-        0 6.7px 5.3px rgba(0, 0, 0, 0.028),
-        0 12.5px 10px rgba(0, 0, 0, 0.035),
-        0 22.3px 17.9px rgba(0, 0, 0, 0.042),
-        0 41.8px 33.4px rgba(0, 0, 0, 0.05),
-        0 100px 80px rgba(0, 0, 0, 0.07);
-    ;
+    margin: 0 .8rem;
+    border-radius: 8px 8px 0 0;
+    box-shadow: var(--shadow-1);
 }
 
 .gh-post-preview-browser-container .gh-pe-iframe {
@@ -128,17 +188,37 @@
     font-weight: 400;
 }
 
-.gh-post-preview-url {
+.gh-post-preview-url,
+.gh-post-preview-email-trigger {
     display: flex;
     align-items: center;
     flex-shrink: 0;
-    height: 32px;
-    border-color: transparent;
-    box-shadow: none;
+    height: 34px;
+    border: none;
     color: var(--darkgrey);
     font-size: 1.25rem;
     font-weight: 500;
     letter-spacing: .2px;
+}
+
+.gh-post-preview-url span,
+.gh-post-preview-email-trigger span {
+    padding: 0 10px;
+}
+
+.gh-post-preview-url:hover,
+.gh-post-preview-email-trigger:hover {
+    background: var(--whitegrey);
+}
+
+.gh-post-preview-email-trigger.open {
+    background: var(--whitegrey);
+}
+
+.gh-post-preview-url svg,
+.gh-post-preview-email-trigger svg {
+    width: 18px;
+    height: 18px;
 }
 
 .gh-post-preview-url .check {
@@ -167,6 +247,11 @@
     border-radius: 4px;
 }
 
+.gh-post-copy-url svg {
+    margin-right: .6rem;
+    fill: none;
+}
+
 .gh-post-preview-copy {
     position: absolute;
     top: 2px;
@@ -181,7 +266,6 @@
     margin-top: -2px;
 }
 
-.gh-post-preview-browser-footer,
 .gh-post-preview-email-footer {
     display: flex;
     justify-content: center;
@@ -192,13 +276,43 @@
 
 .gh-post-preview-email-group {
     display: flex;
-    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
 }
 
 .gh-post-preview-email-header {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
     border-bottom: 1px solid var(--whitegrey);
-    padding: 20px 24px;
-    background: var(--whitegrey-l2);
+    padding: 1rem 2rem;
+    background: var(--white);
+}
+
+.gh-post-preview-email-header label {
+    min-width: 52px;
+}
+
+.gh-post-preview-email-header .gh-input-x {
+    cursor: pointer;
+    background: var(--grey-100);
+    transition: all .15s ease;
+}
+
+.gh-post-preview-email-header .gh-email-subject .gh-input-x:focus,
+.gh-post-preview-email-header .gh-post-preview-email-input.gh-input-x:focus {
+    background: var(--white);
+    cursor: text;
+}
+
+.gh-post-preview-email-header .gh-input-x:hover:not(:focus) {
+    background: var(--whitegrey);
+}
+
+.gh-post-preview-email-header hr {
+    margin: 0;
+    border-color: var(--whitegrey);
 }
 
 .gh-post-preview-email-columns {
@@ -207,45 +321,24 @@
     align-items: flex-start;
 }
 
-.gh-email-preview-newsletter-select p {
-    padding: 0;
-    margin: 0;
-    color: var(--midgrey-l1);
-    font-weight: 500;
-    line-height: 1.8em;
-}
-
 .gh-email-preview-newsletter-select {
-    display: grid;
-    grid-template-columns: 65px 1fr;
+    display: flex;
+    align-items: center;
+    gap: 1.2rem;
 }
 
-.ember-power-select-trigger.gh-preview-newsletter-trigger,
-.ember-power-select-trigger.gh-preview-newsletter-trigger:focus {
-    padding: 0;
-    border: none;
-    cursor: pointer;
-    color: var(--darkgrey);
-    font-size: 1.4rem;
-    font-weight: 600;
-    line-height: 1.8em;
+.gh-email-preview-newsletter-select label {
+    width: 52px;
 }
 
 .gh-preview-newsletter-trigger svg {
     width: 8px;
-    margin-left: 2px;
-    margin-top: -1px;
+    margin-left: 8px;
     vertical-align: middle;
 }
 
 .gh-preview-newsletter-trigger svg path {
     stroke-width: 4px;
-}
-
-.gh-preview-newsletter-dropdown.ember-power-select-dropdown.ember-basic-dropdown-content--below {
-    width: min-content !important;
-    border-top: 1px solid var(--input-border-color);
-    border-radius: var(--border-radius);
 }
 
 .gh-preview-newsletter-dropdown .ember-power-select-option {
@@ -276,13 +369,12 @@
 /* Email preview */
 .gh-post-preview-email-container {
     position: relative;
-    height: calc(100vh - 94px);
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    background: var(--white);
+    background: var(--grey-75);
     padding: 0 30px;
-    overflow: auto;
 }
 
 @media (max-width: 1024px) {
@@ -298,18 +390,11 @@
     overflow: hidden;
     max-width: 740px;
     width: 100%;
+    margin: 0 0 2rem;
     padding: 0;
     background: var(--white);
-    box-shadow:
-        0 0 0 1px rgba(0,0,0,0.02),
-        0 2.8px 2.2px rgba(0, 0, 0, 0.02),
-        0 6.7px 5.3px rgba(0, 0, 0, 0.028),
-        0 12.5px 10px rgba(0, 0, 0, 0.035),
-        0 22.3px 17.9px rgba(0, 0, 0, 0.042),
-        0 41.8px 33.4px rgba(0, 0, 0, 0.05),
-        0 100px 80px rgba(0, 0, 0, 0.07);
-    ;
-    border-radius: 3px 3px 0 0;
+    border-radius: 8px;
+    box-shadow: var(--shadow-1);
 }
 
 .gh-post-preview-email-container iframe {
@@ -318,15 +403,34 @@
     width: 100%;
 }
 
-.gh-post-preview-email-test {
+.gh-post-preview-email-test,
+.gh-post-preview-share {
     display: flex;
-    width: 312px;
+    gap: .8rem;
+}
+
+.gh-post-preview-share {
+    flex-direction: column;
+    min-width: 180px;
+}
+
+.gh-post-preview-share svg {
+    fill: none;
+    margin-right: .6rem;
+    width: 16px;
+    height: 16px;
+}
+
+.gh-post-preview-email-test .form-group,
+.gh-post-preview-share .form-group {
+    margin: 0;
 }
 
 .gh-post-preview-email-test button {
+    width: 100%;
     min-width: 72px;
-    border-top-left-radius: 0;
-    border-bottom-left-radius: 0;
+    margin: 1.2rem 0 .4rem;
+    border-radius: 8px;
 }
 
 .gh-post-preview-email-test .gh-btn-group .gh-btn span {
@@ -334,56 +438,37 @@
     line-height: 34px;
 }
 
-.gh-post-preview-email-test-dropdown {
-    padding: 16px;
+.gh-post-preview-email-test-dropdown,
+.gh-post-preview-share-dropdown {
+    top: calc(100% + 6px);
+    right: 0;
+    left: auto;
+    padding: 1.6rem 2rem;
+    border-radius: 8px;
+    box-shadow: var(--shadow-3);
     animation: fade-out .0s;
     animation-fill-mode: forwards;
 }
 
-.gh-post-preview-email-test-dropdown.closed {
+.gh-post-preview-email-test-dropdown.closed,
+.gh-post-preview-share-dropdown.closed {
     z-index: -1;
 }
 
-.gh-post-preview-email-test-dropdown.fade-in-scale {
+.gh-post-preview-email-test-dropdown.fade-in-scale,
+.gh-post-preview-share-dropdown.fade-in-scale {
     animation: fade-in-scale .2s;
     animation-fill-mode: forwards;
 }
 
 .gh-post-preview-email-input {
-    width: 240px;
-    border-color: var(--whitegrey);
-}
-
-.gh-post-preview-email-input {
-    border-top-right-radius: 0;
-    border-bottom-right-radius: 0;
-    border-right-width: 0;
-}
-
-.gh-post-preview-email-input:focus {
-    border-right-width: 1px;
+    width: 220px;
 }
 
 .gh-post-preview-copy-url-trigger {
     height: 38px;
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
-}
-
-.gh-post-preview-email-trigger span {
-    color: var(--green-d1);
-    font-size: 1.4rem;
-    font-weight: 500;
-}
-
-.gh-post-preview-email-trigger svg {
-    width: 8px;
-    height: auto;
-    margin-left: 6px;
-}
-
-.gh-post-preview-email-trigger svg path {
-    stroke-width: 4px;
 }
 
 .gh-post-test-email-group {
