--- a/ghost/admin/app/components/editor/modals/preview/email/email-subject.hbs
+++ b/ghost/admin/app/components/editor/modals/preview/email/email-subject.hbs
@@ -1,20 +1,13 @@
 <div class="gh-email-subject">
-    {{#if this.isEditing}}
-        <input
-            aria-label="Email subject"
-            type="text"
-            class="gh-input gh-preview-email-subject-input"
-            placeholder={{truncate @post.title 40}}
-            value={{this.subject}}
-            {{on "blur" this.setSubject}}
-            {{on-key "Enter" this.setSubject}}
-            {{autofocus}}
-        />
-    {{else}}
-        <button class="gh-preview-email-subject" type="button" {{on "click" this.editSubject}}>
-            {{this.subject}} {{svg-jar "pen"}}
-        </button>
-    {{/if}}
+    <input
+        aria-label="Email subject"
+        type="text"
+        class="gh-input gh-input-x"
+        placeholder={{truncate @post.title 40}}
+        value={{this.subject}}
+        {{on "blur" this.setSubject}}
+        {{on-key "Enter" this.setSubject}}
+    />
 
     <div class="error">
         <GhErrorMessage @errors={{@post.errors}} @property="emailSubject" />
