--- a/ghost/admin/app/styles/layouts/preview-email.css
+++ b/ghost/admin/app/styles/layouts/preview-email.css
@@ -139,13 +139,17 @@
 }
 
 .gh-email-preview-newsletter-select p.gh-preview-newsletter-name {
-    color: var(--darkgrey);
-    font-weight: 600;
+    display: flex;
+    align-items: center;
+    gap: 4px;
+    margin: 0;
+    min-height: 38px;
+    padding: 4px 0;
+    line-height: 1.15;
 }
 
 p .gh-preview-email-address {
-    color: var(--midlightgrey);
-    font-weight: 500;
+    color: var(--midgrey-l1);
 }
 
 .gh-preview-email-subject {
@@ -179,25 +183,10 @@ p .gh-preview-email-address {
     stroke-width: 2px;
 }
 
-.gh-preview-email-subject-input {
-    height: 25px;
-    border: 0;
-    border-radius: 0;
-    background: transparent;
-    padding: 0;
-    font-size: 1.4rem;
-    font-weight: 600;
-    line-height: 1.8em;
-}
-
-.gh-preview-email-subject-input:focus {
-    background: transparent;
-    box-shadow: inset 0 -1px 0 var(--lightgrey-l1);
-}
-
 .gh-email-subject {
     display: flex;
     align-items: center;
+    width: 100%;
 }
 
 .gh-pe-emailclient-sender span.strong {
@@ -209,7 +198,7 @@ p .gh-preview-email-address {
     flex-direction: column;
     flex-grow: 1;
     align-items: center;
-    background: var(--white);
+    background: var(--whitegrey-l2);
     padding: 8vmin 30px 30px;
     height: calc(100vh - 119px);
     border-bottom-left-radius: 5px;
@@ -221,7 +210,7 @@ p .gh-preview-email-address {
     height: 657px;
     border-radius: 40px;
     display: flex;
-    background: var(--whitegrey-l2);
+    background: var(--white);
     box-shadow:
         0 0 0 1px rgba(0,0,0,0.02),
         0 2.8px 2.2px rgba(0, 0, 0, 0.02),
