--- a/ghost/admin/app/components/stats/charts/top-locations.hbs
+++ b/ghost/admin/app/components/stats/charts/top-locations.hbs
@@ -1,6 +1,6 @@
 <div>
     <div class="gh-stats-metric-header"><h5 class="gh-stats-metric-label">Locations</h5></div>
-    <div {{react-render this.ReactComponent props=(hash chartRange=@chartRange audience=@audience device=@device browser=@browser location=@location source=@source pathname=@pathname)}}></div>
+    <div {{react-render this.ReactComponent props=(hash chartRange=@chartRange audience=@audience device=@device browser=@browser location=@location source=@source pathname=@pathname apiVersion=@apiVersion)}}></div>
 </div>
 
 {{#if this.showSeeAll}}
