--- a/ghost/admin/app/components/stats/charts/top-pages.hbs
+++ b/ghost/admin/app/components/stats/charts/top-pages.hbs
@@ -18,7 +18,7 @@
             </PowerSelect>
         </div> --}}
     </div>
-    <div {{react-render this.ReactComponent props=(hash chartRange=@chartRange audience=@audience device=@device browser=@browser location=@location source=@source pathname=@pathname)}}></div>
+    <div {{react-render this.ReactComponent props=(hash chartRange=@chartRange audience=@audience device=@device browser=@browser location=@location source=@source pathname=@pathname apiVersion=@apiVersion)}}></div>
 </div>
 
 {{#if this.showSeeAll}}
