--- a/ghost/admin/app/templates/stats.hbs
+++ b/ghost/admin/app/templates/stats.hbs
@@ -87,6 +87,7 @@
                 @location={{this.location}}
                 @source={{this.source}}
                 @pathname={{this.pathname}}
+                @os={{this.os}}
                 @apiVersion={{this.apiVersion}}
             />
         </section>
@@ -101,6 +102,7 @@
                     @location={{this.location}}
                     @source={{this.source}}
                     @pathname={{this.pathname}}
+                    @os={{this.os}}
                     @apiVersion={{this.apiVersion}}
                 />
             </div>
@@ -113,6 +115,7 @@
                     @location={{this.location}}
                     @source={{this.source}}
                     @pathname={{this.pathname}}
+                    @os={{this.os}}
                     @apiVersion={{this.apiVersion}}
                 />
             </div>
@@ -128,6 +131,7 @@
                     @location={{this.location}}
                     @source={{this.source}}
                     @pathname={{this.pathname}}
+                    @os={{this.os}}
                     @apiVersion={{this.apiVersion}}
                 />
             </div>
@@ -140,6 +144,7 @@
                         @location={{this.location}}
                         @source={{this.source}}
                         @pathname={{this.pathname}}
+                        @os={{this.os}}
                         @apiVersion={{this.apiVersion}}
                     />
             </div>
