Added graph to stats page for os (#22291)
ref https://linear.app/ghost/issue/ANAL-128/
- added a chart for OS to the technical section on the stats page

--- a/ghost/admin/app/components/stats/technical-overview.hbs
+++ b/ghost/admin/app/components/stats/technical-overview.hbs
@@ -11,10 +11,12 @@
                     @label="Browsers" />
             </button>
 
-            {{!-- <button type="button" class="gh-stats-tab {{if this.osTabSelected 'is-selected'}}" {{on "click" this.changeTabToOSs}}>
-                <Stats::Parts::Metric
-                    @label="Operating systems" />
-            </button> --}}
+            {{#if (gt @apiVersion 0)}}
+                <button type="button" class="gh-stats-tab {{if this.osTabSelected 'is-selected'}}" {{on "click" this.changeTabToOSs}}>
+                    <Stats::Parts::Metric
+                        @label="OS" />
+                </button>
+            {{/if}}
         </div>
     </div>
 
