--- a/ghost/email-service/lib/email-templates/partials/styles.hbs
+++ b/ghost/email-service/lib/email-templates/partials/styles.hbs
@@ -984,6 +984,7 @@ a[data-flickr-embed] img {
 }
 
 .kg-cta-bg-yellow .kg-cta-sponsor-label {
+    color: #e3d9c4;
     border-bottom: 1px solid #e3d9c4;
 }
 
@@ -1006,6 +1007,30 @@ a[data-flickr-embed] img {
     font-size: 12px;
     font-weight: 600;
     text-transform: uppercase;
+}
+
+.kg-cta-bg-blue .kg-cta-sponsor-label p {
+    color: #97A0A3;
+}
+
+.kg-cta-bg-green .kg-cta-sponsor-label p {
+    color: #97A198;
+}
+
+.kg-cta-bg-yellow .kg-cta-sponsor-label p {
+    color: #A49F94;
+}
+
+.kg-cta-bg-red .kg-cta-sponsor-label p {
+    color: #A39797;
+}
+
+.kg-cta-bg-pink .kg-cta-sponsor-label p {
+    color: #A49BA1;
+}
+
+.kg-cta-bg-purple .kg-cta-sponsor-label p {
+    color: #9D9AA4;
 }
 
 .kg-cta-sponsor-label a {
@@ -1057,6 +1082,7 @@ img.kg-cta-image {
 
 .post-content-sans-serif .kg-cta-text {
     font-family: -apple-system, BlinkMacSystemFont, Roboto, Helvetica, Arial, sans-serif;
+    font-size: 17px;
 }
 
 .kg-cta-text p {
@@ -1104,6 +1130,7 @@ img.kg-cta-image {
     font-family: -apple-system, BlinkMacSystemFont, Roboto, Helvetica, Arial, sans-serif;
     font-size: 0.85em;
     font-weight: 600;
+    font-weight: 500;
     text-decoration: none;
 }
 
@@ -1115,8 +1142,9 @@ img.kg-cta-image {
 .kg-cta-immersive a.kg-cta-button {
     display: inline-block; 
     width: 100%;
-    font-size: 0.85em;
+    font-size: 0.9em;
     font-weight: 600;
+    font-weight: 500;
     text-align: center;
     text-decoration: none;
     border-radius: 6px;
