--- a/ghost/admin/app/templates/member.hbs
+++ b/ghost/admin/app/templates/member.hbs
@@ -38,7 +38,7 @@
         </div>
 
         <section class="view-actions">
-            {{#if this.session.user.isAdmin}}
+            {{#if (gh-user-can-manage-members this.session.user)}}
                 {{#unless this.member.isNew}}
                     <span class="dropdown">
                         <GhDropdownButton
