Added AlertDialog component to Shade

--- a/apps/shade/styles.css
+++ b/apps/shade/styles.css
@@ -38,8 +38,8 @@
         --border: 204 14% 93%;
         --input: 204 14% 93%;
         --card: 0 0% 100%;
-        --card-foreground: 216 11% 9%;;
-        --primary: 216 11% 9%;;
+        --card-foreground: 216 11% 9%;
+        --primary: 216 11% 9%;
         --primary-foreground: 0 0% 100%;
         --secondary: 204 14% 93%;
         --secondary-foreground: 216 11% 9%;
