--- a/ghost/admin/app/components/stats/charts/kpis.hbs
+++ b/ghost/admin/app/components/stats/charts/kpis.hbs
@@ -1,1 +1,1 @@
-<div {{react-render this.ReactComponent props=(hash chartRange=@chartRange audience=@audience device=@device browser=@browser location=@location source=@source pathname=@pathname selected=@selected apiVersion=@apiVersion)}}></div>
+<div {{react-render this.ReactComponent props=(hash chartRange=@chartRange audience=@audience device=@device browser=@browser location=@location source=@source pathname=@pathname selected=@selected)}}></div>
