--- a/ghost/admin/app/components/stats/charts/top-sources.hbs
+++ b/ghost/admin/app/components/stats/charts/top-sources.hbs
@@ -19,7 +19,7 @@
         </div> --}}
     </div>
 
-    <div {{react-render this.ReactComponent props=(hash chartRange=@chartRange audience=@audience device=@device browser=@browser location=@location source=@source pathname=@pathname apiVersion=@apiVersion)}}></div>
+    <div {{react-render this.ReactComponent props=(hash chartRange=@chartRange audience=@audience device=@device browser=@browser location=@location source=@source pathname=@pathname)}}></div>
 </div>
 
 {{#if this.showSeeAll}}
